After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 739752 - Workaround build failures with boost>=1.57 and moc
Workaround build failures with boost>=1.57 and moc
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: qt-gstreamer
1.2.0
Other Linux
: Normal normal
: git master
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 743602 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-11-07 00:19 UTC by Heiko Becker
Modified: 2015-06-10 12:01 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch to fix build failure with boost >= 1.57 (1.08 KB, patch)
2014-11-07 00:21 UTC, Heiko Becker
committed Details | Review

Description Heiko Becker 2014-11-07 00:19:05 UTC
Without the patch I get the following error message when building the Qt4 version:

[  5%] Automatic moc for target capstest
cd /var/tmp/paludis/build/media-libs-qt-gstreamer-1.2.0/work/build/tests/auto && /usr/bin/cmake -E cmake_autogen /var/tmp/paludis/bui
ld/media-libs-qt-gstreamer-1.2.0/work/build/tests/auto/CMakeFiles/capstest_automoc.dir/ None
Generating capstest.moc
usr/include/boost/type_traits/detail/has_binary_operator.hp:50: Parse error at "BOOST_JOIN"
AUTOGEN: error: process for /var/tmp/paludis/build/media-libs-qt-gstreamer-1.2.0/work/build/src/QGlib/connect.moc failed:
usr/include/boost/type_traits/detail/has_binary_operator.hp:50: Parse error at "BOOST_JOIN"

moc failed...
src/QGlib/CMakeFiles/QtGLib_automoc.dir/build.make:52: recipe for target 'src/QGlib/CMakeFiles/QtGLib_automoc' failed
make[2]: Leaving directory '/var/tmp/paludis/build/media-libs-qt-gstreamer-1.2.0/work/build'
make[2]: *** [src/QGlib/CMakeFiles/QtGLib_automoc] Error 1
CMakeFiles/Makefile2:311: recipe for target 'src/QGlib/CMakeFiles/QtGLib_automoc.dir/all' failed
Comment 1 Heiko Becker 2014-11-07 00:21:28 UTC
Created attachment 290126 [details] [review]
Patch to fix build failure with boost >= 1.57
Comment 2 Tim-Philipp Müller 2015-02-19 19:14:27 UTC
*** Bug 743602 has been marked as a duplicate of this bug. ***
Comment 3 Heiko Becker 2015-06-02 10:09:32 UTC
Ping? I've posted this patch almost half a year ago...
Comment 4 Tim-Philipp Müller 2015-06-10 12:00:14 UTC
Sorry for the delay, qt-gstreamer isn't really properly maintained. I've pushed this now:

commit 1d2edcc9562c8826fd17b5233691f4a313ab71c7
Author: Heiko Becker <heirecka@exherbo.org>
Date:   Fri Nov 7 00:11:02 2014 +0100

    Workaround build failures with boost>=1.57 and moc
    
    Otherwise I get the following error message:
    'usr/include/boost/type_traits/detail/has_binary_operator.hp:50:
    Parse error at "BOOST_JOIN"'. See
    https://bugreports.qt-project.org/browse/QTBUG-22829 for details.
    
    The old workaround to define BOOST_TT_HAS_OPERATOR_HPP_INCLUDED
    doesn't seem to work here.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=739752