Workaround build failures with boost>=1.57 and moc

Otherwise I get the following error message:
'usr/include/boost/type_traits/detail/has_binary_operator.hp:50:
Parse error at "BOOST_JOIN"'. See
https://bugreports.qt-project.org/browse/QTBUG-22829 for details.

The old workaround to define BOOST_TT_HAS_OPERATOR_HPP_INCLUDED
doesn't seem to work here.

https://bugzilla.gnome.org/show_bug.cgi?id=739752